# vansy-f8a-genai-test

./: .env.example  README.md  pyproject.toml
src/vansy_f8a_genai_test/: report_a03_rag_and_reasoning_frameworks_tutorial.md  report_a03_rag_and_reasoning_frameworks_tutorial_prompt.py
src/vansy_f8a_genai_test/a03_rag_and_reasoning_frameworks_tutorial/assets/code/: agent_evaluator.py  basic_rag_chatbot.ipynb  bulk_hospital_uploader.py  data_processing.ipynb  react_agent_chatbot.ipynb
src/vansy_f8a_genai_test/a03_rag_and_reasoning_frameworks_tutorial/assets/data/: evaluation_data.csv  evaluation_results.csv  reviews_cleaned.csv
